[gd_scene load_steps=7 format=3 uid="uid://cicl4kp3vswub"]

[ext_resource type="Script" path="res://TestPlayer/PlayerMovement.gd" id="1_u6rfv"]
[ext_resource type="Script" path="res://TestPlayer/camera_2d.gd" id="2_wiucb"]
[ext_resource type="Script" path="res://Scripts/possession.gd" id="3_mp1ck"]
[ext_resource type="Texture2D" uid="uid://ctauqvigy25b7" path="res://Sprites/player-ghost.png" id="4_6j1vx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d120h"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_ad8rd"]
radius = 44.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
texture_filter = 1
script = ExtResource("1_u6rfv")
speed = 90

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_d120h")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
script = ExtResource("2_wiucb")

[node name="Possession" type="Node2D" parent="."]
script = ExtResource("3_mp1ck")

[node name="PossessionRadius" type="Area2D" parent="Possession"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Possession/PossessionRadius"]
shape = SubResource("CircleShape2D_ad8rd")
debug_color = Color(0.174557, 1, 0.792493, 0.0666667)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_6j1vx")

[connection signal="body_entered" from="Possession/PossessionRadius" to="Possession" method="_on_possession_radius_body_entered"]
[connection signal="body_exited" from="Possession/PossessionRadius" to="Possession" method="_on_possession_radius_body_exited"]
